--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "format": "prettier --config ./config/prettier.cjs --write ./src/**/*.ts ./config/**/*.{cjs,json}",
     "lint": "eslint --config ./config/eslint.cjs",
     "nuke": "npm run clean && rimraf node_modules 'package-lock.json'",
+    "release": "semantic-release --debug --dry-run --no-ci",
     "serve:docs": "http-server ./docs/ --port 8090",
     "test": "node --test --experimental-test-coverage",
     "test:ci": "node --test --experimental-test-coverage",
