--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zod-schemas",
+  "name": "@jackdbd/zod-schemas",
   "version": "1.0.0",
   "description": "Some [Zod](https://github.com/colinhacks/zod) schemas I reuse across projects.",
   "author": {
