--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "build:ts": "tsc -p tsconfig.json",
     "build:ts:watch": "tsc -p tsconfig.json --watch",
     "clean": "rimraf lib/ tsconfig.tsbuildinfo",
+    "deps": "taze",
     "dev": "run-p 'build:ts:watch' 'test:watch'",
     "docs:ae": "api-extractor run --config ./config/api-extractor.json --verbose",
     "docs:ad": "api-documenter markdown --input-folder .ae/doc --output-folder api-docs",
@@ -95,30 +96,30 @@
     "test:watch": "node --test --watch"
   },
   "dependencies": {
-    "zod": "^3.22.4"
+    "zod": "^3.23.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
-    "@microsoft/api-documenter": "^7.23.20",
-    "@microsoft/api-extractor": "^7.39.4",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "doctoc": "^2.2.1",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "http-server": "^14.1.1",
-    "npm-check-updates": "^16.14.14",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^3.2.4",
-    "rimraf": "^5.0.5",
-    "semantic-release": "^23.0.0",
-    "tsm": "^2.3.0",
-    "typedoc": "^0.25.7",
-    "typedoc-plugin-zod": "^1.1.2",
-    "typescript": "^5.3.3",
-    "zocker": "^1.4.1"
+    "@commitlint/cli": "latest",
+    "@commitlint/config-conventional": "latest",
+    "@microsoft/api-documenter": "latest",
+    "@microsoft/api-extractor": "latest",
+    "@semantic-release/changelog": "latest",
+    "@semantic-release/git": "latest",
+    "@typescript-eslint/eslint-plugin": "latest",
+    "doctoc": "latest",
+    "eslint": "latest",
+    "eslint-config-prettier": "latest",
+    "eslint-plugin-prettier": "latest",
+    "http-server": "latest",
+    "npm-run-all": "latest",
+    "prettier": "latest",
+    "rimraf": "latest",
+    "semantic-release": "latest",
+    "taze": "latest",
+    "tsm": "latest",
+    "typedoc": "latest",
+    "typedoc-plugin-zod": "latest",
+    "typescript": "latest",
+    "zocker": "latest"
   }
 }
